--- a/tests/Chess.Domain.Tests/Chess.Domain.Tests.csproj
+++ b/tests/Chess.Domain.Tests/Chess.Domain.Tests.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Chess\Chess.Domain.csproj" />
+    <ProjectReference Include="..\..\src\Chess.Domain\Chess.Domain.csproj" />
   </ItemGroup>
 
 </Project>
